--- a/2.html
+++ b/2.html
@@ -25,5 +25,26 @@ may be embedded into the rendered page. <strong><u>HTML</u></strong> provides a 
 <img src="coding.jpg" width="100%">
 for text such as headings, paragraphs, lists, links, quotes and other items.
 HTML elements are delineated by tags, written using angle brackets.
+<p>
+  <!-- 라이브리 시티 설치 코드 -->
+ <div id="lv-container" data-id="city" data-uid="MTAyMC81MjIxMC8yODY5MA==">
+  <script type="text/javascript">
+    (function(d, s) {
+        var j, e = d.getElementsByTagName(s)[0];
+
+        if (typeof LivereTower === 'function') { return; }
+
+        j = d.createElement(s);
+        j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+        j.async = true;
+
+        e.parentNode.insertBefore(j, e);
+    })(document, 'script');
+  </script>
+ <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+ </div>
+ <!-- 시티 설치 코드 끝 -->
+</p> 
+
 </body>
 </html>
